--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "domaincolor"
-version = "0.1.2"
+version = "1.0.0"
 authors = ["Paul Modlin <paulmodlin@vivaldi.net"]
 
 [lib]
@@ -9,8 +9,8 @@ path = "src/lib.rs"
 
 [dependencies]
 domain-coloring = { git = "https://github.com/pmodl/rust-domain-coloring", branch = "master" }
-num-complex = "*"
-regex = "*"
-lazy_static = "*"
+num-complex = "0.1.*"
+regex = "1.*"
+lazy_static = "1.*"
 structopt = "0.2"
 dc-utils = { path = "dc-utils"}
